<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.nyaringitab.novaapp.MenteeActivity">

    <EditText
        android:id="@+id/edt_mentee_name"
        android:layout_width="183dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/txt_mentee_sign_in"
        android:layout_alignLeft="@id/txt_mentee_sign_in"
        android:layout_below="@+id/txt_mentee_sign_in"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/edt_mentee_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edt_mentee_name" />


    <EditText
        android:id="@+id/edt_mentee_email"
        android:layout_width="183dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/edt_mentee_name"
        android:layout_alignLeft="@id/edt_mentee_name"
        android:layout_below="@+id/edt_mentee_name"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/edt_mentee_email"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edt_mentee_email" />

    <EditText
        android:id="@+id/edt_mentee_password"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/edt_confirm_pass"
        android:layout_alignStart="@+id/edt_confirm_pass"
        android:layout_alignLeft="@id/edt_confirm_pass"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edit_password" />

    <EditText
        android:id="@+id/edt_organization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edt_occupation"
        android:layout_alignStart="@+id/edt_occupation"
        android:layout_alignLeft="@id/edt_occupation"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/edt_company"
        android:inputType="textCapWords"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edt_company" />

    <TextView
        android:id="@+id/txt_mentee_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_mentee_sign_in"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_mentee_sign_in" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/btn_sign_in_mentee"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mentee_password"
        app:layout_constraintVertical_bias="0.82"
        tools:text="@string/btn_sign_in_mentee" />

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/txt_sign_in_menu"
        android:layout_alignEnd="@+id/txt_mentee_sign_in"
        android:layout_alignRight="@id/txt_mentee_sign_in"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/edit_confirm_password"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edit_confirm_password" />

    <EditText
        android:id="@+id/edt_occupation"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_above="@+id/btn_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/edt_occupation"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_organization"
        tools:text="@string/edt_occupation" />

    <CheckBox
        android:id="@+id/checkBox_mentee"
        android:layout_width="93dp"
        android:layout_height="34dp"
        android:layout_above="@+id/edt_occupation"
        android:layout_alignStart="@+id/edt_mentee_name"
        android:layout_alignLeft="@id/edt_mentee_name"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_mentee"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_mentor"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/btn_mentee" />

    <CheckBox
        android:id="@+id/checkBox_mentor"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_alignBottom="@+id/checkBox_mentee"
        android:layout_alignStart="@+id/btn_sign_in"
        android:layout_alignLeft="@id/btn_sign_in"
        android:text="@string/btn_mentor"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_cb"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/btn_mentor" />

    <CheckBox
        android:id="@+id/checkBox_cb"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignTop="@+id/checkBox_mentee"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/btn_career_buddy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/btn_career_buddy" />

    <TextView
        android:id="@+id/txt_sign_in_menu"
        android:layout_width="234dp"
        android:layout_height="27dp"
        android:layout_above="@+id/checkBox_cb"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/text_signin"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_signin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignBottom="@+id/txt_mentee_sign_in"
        android:layout_toEndOf="@+id/edt_occupation"
        android:layout_toRightOf="@id/edt_occupation"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>
